Add nuspec to content files.

--- a/src/FindReplaceCode/App.config
+++ b/src/FindReplaceCode/App.config
@@ -10,9 +10,9 @@
 	</startup>
 	<applicationSettings>
 		<FindReplaceCode.Properties.Settings>
-			<setting name="FindReplaceFileContentExtensions" serializeAs="String">
-				<value>asax,config,cs,csproj,fsd,json,md,proto,ps1,settings,sln</value>
-			</setting>
-		</FindReplaceCode.Properties.Settings>
+   <setting name="FindReplaceFileContentExtensions" serializeAs="String">
+    <value>asax,config,cs,csproj,fsd,json,md,nuspec,proto,ps1,settings,sln</value>
+   </setting>
+  </FindReplaceCode.Properties.Settings>
 	</applicationSettings>
 </configuration>
