--- a/src/FindReplaceCode/Properties/Settings.settings
+++ b/src/FindReplaceCode/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="FindReplaceFileContentExtensions" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">asax,cake,config,cs,csproj,fsd,json,md,nuspec,proto,ps1,settings,sln,xaml</Value>
+      <Value Profile="(Default)">asax,cake,config,cs,csproj,fsd,html,json,md,nuspec,proto,ps1,settings,sln,xaml,yml</Value>
     </Setting>
   </Settings>
 </SettingsFile>
