Process Directory.Build.props files

--- a/src/FindReplaceCode/App.config
+++ b/src/FindReplaceCode/App.config
@@ -11,7 +11,7 @@
 	<applicationSettings>
 		<FindReplaceCode.Properties.Settings>
    <setting name="FindReplaceFileContentExtensions" serializeAs="String">
-    <value>asax,cake,config,cs,csproj,fsd,html,json,md,nuspec,proto,ps1,settings,sln,xaml,yml</value>
+    <value>asax,cake,config,cs,csproj,fsd,html,json,md,nuspec,props,proto,ps1,settings,sln,xaml,yml</value>
    </setting>
   </FindReplaceCode.Properties.Settings>
 	</applicationSettings>
